# shad-algo-1

./: .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/context1/: CMakeLists.txt  task1.h  test_task1.cpp
